# public/docs/openapi.yaml
@@ -39,11 +39,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: vyost@example.com
+                  example: buster02@example.net
                 password:
                   type: string
                   description: ''
-                  example: tenetur
+                  example: ipsam
               required:
                 - email
                 - password
@@ -77,9 +77,58 @@ paths:
       responses: {  }
       tags:
         - Auth
+  /api/tasks:
+    post:
+      summary: ''
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Tasks
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  description: 'Must not be greater than 255 characters.'
+                  example: rjkkctvhooymtnznfkxcuawlydxwglwmwrjjavzcmtoctyralqkgsmuupegbodsnophixcpcmzwxodkuijtouaitmewkmakanxrtvuhystsyndgefczmwptcbfumtrapkinqeahamtarnbzoeuuxqoyijmkvkjifegwrwssqlablnvcmlxduvipqfqjwuiqpvahdzghyggsckkriqvfyalyymvvjdekwejzwmgksgjhxwgtwmbnccetc
+                description:
+                  type: string
+                  description: ''
+                  example: reiciendis
+              required:
+                - title
 tags:
   -
     name: Auth
+    description: ''
+  -
+    name: Tasks
     description: ''
 components:
   securitySchemes:
